# learning-ocaml

./: .gitignore  README.md
helloworld/: dune-project
