(lang dune 3.0)

(name helloworld)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "daniellx42")

(maintainers "daniellx42")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name helloworld)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
